Questions fixed + Body overflow-x hidden added

--- a/frontend/components/Questions/Questions.component.css
+++ b/frontend/components/Questions/Questions.component.css
@@ -16,6 +16,7 @@
 
   .questions {
     display: flex;
+    width: 100%;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -43,6 +44,7 @@
     align-items: center;
     padding: 14px 16px;
     position: relative;
+    overflow: hidden;
     z-index: 5;
 
     width: 100%;
